--- a/lxtask.desktop.in
+++ b/lxtask.desktop.in
@@ -2,10 +2,13 @@
 Encoding=UTF-8
 Name=Task Manager
 Name[zh_TW]=工作管理員
+Name[fi]=Toimintojen käsittelijä
 Comment=Manage running processes
 Comment[zh_TW]=管理執行中的程式
+Comment[fi]=Hallitse käynnissä olevia prosesseja
 GenericName=Process manager
 GenericName=工作管理員
+GenericName[fi]=Prosessien käsittelijä
 Exec=lxtask
 Icon=utilities-system-monitor
 Terminal=false
