Added and modified some Finnish translations in .desktop-files

--- a/lxtask.desktop.in
+++ b/lxtask.desktop.in
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Name=Task Manager
 Name[zh_TW]=工作管理員
-Name[fi]=Toimintojen käsittelijä
+Name[fi]=Tehtävienhallinta
 Comment=Manage running processes
 Comment[zh_TW]=管理執行中的程式
 Comment[fi]=Hallitse käynnissä olevia prosesseja
