Added Arabic translations for LXTerminal, LXSession-lite, LXPanel, LXTask and added Russian translations for LXTerminal

--- a/configure.ac
+++ b/configure.ac
@@ -29,7 +29,7 @@ AM_GNU_GETTEXT_VERSION(0.14.1)
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
 
-ALL_LINGUAS="cs de el en_GB eu fi fr gl hu ja lv nb_NO nl pl pt_BR pt_PT ru ur vi zh_TW es zh_CN et sv"
+ALL_LINGUAS="cs de el en_GB eu fi fr gl hu ja lv nb_NO nl pl pt_BR pt_PT ru ur vi zh_TW es zh_CN et sv ar"
 AM_GLIB_GNU_GETTEXT
 
 AC_OUTPUT([
