--- a/configure.ac
+++ b/configure.ac
@@ -30,7 +30,7 @@ AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
 
 #These codes are NOT maintained by Pootle ca el en_GB lv sq ur
-ALL_LINGUAS="ar ca cs da de el en_GB es et eu fa fi fr gl hu id it ja ko lt lv ml nb nl nn pl pt pt_BR ru sk sq sv uk ur vi zh_CN zh_TW"
+ALL_LINGUAS="ar ca cs da de el en_GB es et eu fa fi fr gl hr hu id it ja ko lt lv ml nb nl nn pl pt pt_BR ru sk sq sv uk ur vi zh_CN zh_TW"
 AM_GLIB_GNU_GETTEXT
 
 AC_OUTPUT([
