--- a/lxtask.desktop.in
+++ b/lxtask.desktop.in
@@ -2,12 +2,15 @@
 Name=Task Manager
 Name[zh_TW]=工作管理員
 Name[fi]=Tehtävienhallinta
+Name[ja]=タスクマネージャ
 Comment=Manage running processes
 Comment[zh_TW]=管理執行中的程式
 Comment[fi]=Hallitse käynnissä olevia prosesseja
+Comment[ja]=実行中のプロセスを管理します
 GenericName=Process manager
 GenericName=工作管理員
 GenericName[fi]=Prosessien käsittelijä
+GenericName[ja]=プロセスマネージャ
 Exec=lxtask
 Icon=utilities-system-monitor
 Terminal=false
