lxtask: add portuguese translation to desktop file

--- a/lxtask.desktop.in
+++ b/lxtask.desktop.in
@@ -2,16 +2,19 @@
 Name=Task Manager
 Name[fi]=Tehtävienhallinta
 Name[ja]=タスクマネージャ
+Name[pt]=Gestor de Tarefas
 Name[zh_TW]=工作管理員
 Comment=Manage running processes
 Comment[de]=Laufende Prozesse verwalten
 Comment[fi]=Hallitse käynnissä olevia prosesseja
 Comment[ja]=実行中のプロセスを管理します
+Comment[pt]=Gestão dos processos em execução
 Comment[zh_TW]=管理執行中的程式
 GenericName=Process manager
 GenericName[de]=Prozessverwaltung
 GenericName[fi]=Prosessien käsittelijä
 GenericName[ja]=プロセスマネージャ
+GenericName[pt]=Gestor de processos
 GenericName[zh_TW]=工作管理員
 Exec=lxtask
 Icon=utilities-system-monitor
