--- a/lxtask.desktop.in
+++ b/lxtask.desktop.in
@@ -1,21 +1,7 @@
 [Desktop Entry]
-Name=Task Manager
-Name[fi]=Tehtävienhallinta
-Name[ja]=タスクマネージャ
-Name[pt]=Gestor de Tarefas
-Name[zh_TW]=工作管理員
-Comment=Manage running processes
-Comment[de]=Laufende Prozesse verwalten
-Comment[fi]=Hallitse käynnissä olevia prosesseja
-Comment[ja]=実行中のプロセスを管理します
-Comment[pt]=Gestão dos processos em execução
-Comment[zh_TW]=管理執行中的程式
-GenericName=Process manager
-GenericName[de]=Prozessverwaltung
-GenericName[fi]=Prosessien käsittelijä
-GenericName[ja]=プロセスマネージャ
-GenericName[pt]=Gestor de processos
-GenericName[zh_TW]=工作管理員
+_Name=Task Manager
+_Comment=Manage running processes
+_GenericName=Process manager
 Exec=lxtask
 Icon=utilities-system-monitor
 Terminal=false
