--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_PREREQ([2.57])
-AC_INIT(lxtask,[0.1.3], [],lxtask)
+AC_INIT(lxtask,[0.1.4], [],lxtask)
 AM_INIT_AUTOMAKE()
 AC_PROG_INTLTOOL(, [no-xml])
 AM_MAINTAINER_MODE
@@ -19,7 +19,20 @@ AC_HEADER_STDC()
 AC_CHECK_HEADERS([dirent.h pwd.h sys/types.h sys/stat.h sys/param.h \
                   stdio.h stdlib.h string.h unistd.h stdlib.h signal.h])
 
-PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.6.0])
+AC_ARG_ENABLE(gtk3,
+[  --enable-gtk3        enable to use gtk-3.0 instead of gtk-2.0 ],
+[case "${enableval}" in
+  yes)  enable_gtk3=yes ;;
+  no)   enable_gtk3=no ;;
+  *) AC_MSG_ERROR([bad value "${enableval}" for --enable-gtk3, use "yes" (default) or "no".]) ;;
+esac],[])
+
+if test "x$enable_gtk3" = "xyes" ; then
+  PKG_CHECK_MODULES(GTK, [gtk+-3.0 >= 3.0.0])
+else
+  PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.6.0])
+fi
+
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
