--- a/debian/rules
+++ b/debian/rules
@@ -3,8 +3,11 @@
 %:
 	dh ${@}
 
-override_dh_auto_install:
+override_dh_auto_configure:
 	./autogen.sh
+	dh_auto_configure
+
+override_dh_auto_install:
 	dh_auto_install -- DESTDIR=$(CURDIR)/debian/lxtask
 
 override_dh_auto_test:
