--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS =	po src
 
 desktopdir = $(datadir)/applications
-desktop_in_files = lxtask.desktop.in
+desktop_in_files = data/lxtask.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 @INTLTOOL_DESKTOP_RULE@
 
