Use macro AM_MAINTAINER_MODE correct way - with ([enable])

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@ AC_PREREQ([2.57])
 AC_INIT(lxtask,[0.1.4], [],lxtask)
 AM_INIT_AUTOMAKE([foreign no-dist-gzip dist-xz])
 AC_PROG_INTLTOOL(, [no-xml])
-AM_MAINTAINER_MODE
+AM_MAINTAINER_MODE([enable])
 
 AM_CONFIG_HEADER(config.h)
 
