Replace deprecated macro AC_PROG_INTLTOOL with IT_PROG_INTLTOOL.

--- a/configure.ac
+++ b/configure.ac
@@ -1,11 +1,11 @@
 AC_PREREQ([2.57])
 AC_INIT(lxtask,[0.1.4], [],lxtask)
 AM_INIT_AUTOMAKE([foreign no-dist-gzip dist-xz])
-AC_PROG_INTLTOOL(, [no-xml])
+
 AM_MAINTAINER_MODE([enable])
 AC_CONFIG_MACRO_DIR([.])
 
-AM_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS([config.h])
 
 AC_PROG_CC
 AC_PROG_INSTALL
@@ -38,9 +38,10 @@ PKG_CHECK_MODULES(GTK, [$pkg_modules])
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
 
+# Init intltool
+IT_PROG_INTLTOOL
+
 GETTEXT_PACKAGE=lxtask
-#AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION(0.14.1)
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [Gettext package.])
 
