Compile the --enable-gtk3 option with -Wno-deprecated-declarations
This is a GTK+ 2 application ported to GTK+ 3, not a native GTK+ 3
application. The deprecated GTK+ 3 features will most likely not be
removed and can still be used.

Add this compiler option so that only really important warnings are
issued.

--- a/configure.ac
+++ b/configure.ac
@@ -29,6 +29,7 @@ esac],[])
 
 echo "x$enable_gtk3"
 if test "x$enable_gtk3" = "xyes" ; then
+  CFLAGS="$CFLAGS -Wno-deprecated-declarations"
   pkg_modules="gtk+-3.0 >= 3.0.0"
 else
   pkg_modules="gtk+-2.0 >= 2.6.0"
