--- a/configure.ac
+++ b/configure.ac
@@ -39,6 +39,10 @@ else
   pkg_modules="gtk+-2.0 >= 2.6.0"
 fi
 
+PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.14.0)
+AC_SUBST(GLIB_CFLAGS)
+AC_SUBST(GLIB_LIBS)
+
 PKG_CHECK_MODULES(GTK, [$pkg_modules])
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
